--- a/analysis/simulation_null_weight_summary.Rmd
+++ b/analysis/simulation_null_weight_summary.Rmd
@@ -47,6 +47,138 @@ get_plot <- function(ctwas_param,susie_param,true_value,title_name){
 }
 ```
 
+### Parameter estimation on all regions (min_gene=0, min_p_single_effect=0, min_var=1)
+#### Enrichment = 1
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(1, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","enrichment")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","enrichment")
+get_plot(ctwas_param,susie_param,1,"Enrichment")
+```
+
+#### Enrichment = 10
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(2, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","enrichment")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","enrichment")
+get_plot(ctwas_param,susie_param,10,"Enrichment")
+```
+
+#### Enrichment = 40
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(3, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","enrichment")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","enrichment")
+get_plot(ctwas_param,susie_param,40,"Enrichment")
+```
+
+#### Enrichment = 80
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(4, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","enrichment")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","enrichment")
+get_plot(ctwas_param,susie_param,80,"Enrichment")
+```
+
+#### Gene Prior = 0.00025
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(1, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior")
+get_plot(ctwas_param,susie_param,0.00025,"Gene Prior")
+```
+
+#### Gene Prior = 0.0025
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(2, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior")
+get_plot(ctwas_param,susie_param,0.0025,"Gene Prior")
+```
+
+#### Gene Prior = 0.01
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(3, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior")
+get_plot(ctwas_param,susie_param,0.01,"Gene Prior")
+```
+
+#### Gene Prior = 0.02
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(4, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior")
+get_plot(ctwas_param,susie_param,0.02,"Gene Prior")
+```
+
+#### Gene Variance = 10.2
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(1, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior_var")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior_var")
+get_plot(ctwas_param,susie_param,10.2,"Gene Prior Variance")
+```
+
+#### Gene Variance = 10.2
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(2, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior_var")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior_var")
+get_plot(ctwas_param,susie_param,10.2,"Gene Prior Variance")
+```
+
+#### Gene Variance = 10.2
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(3, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior_var")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior_var")
+get_plot(ctwas_param,susie_param,10.2,"Gene Prior Variance")
+```
+
+#### Gene Variance = 10.2
+```{r echo=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
+runtag = "one_tissue"
+simutags <- paste(4, 1:10, sep = "-")
+
+ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior_var")
+susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior_var")
+get_plot(ctwas_param,susie_param,10.2,"Gene Prior Variance")
+```
 
 ### Parameter estimation on selected regions (min_gene=1, min_p_single_effect=0.8, min_var=2)
 #### Enrichment = 1
@@ -55,139 +187,6 @@ results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/
 runtag = "one_tissue"
 simutags <- paste(1, 1:10, sep = "-")
 
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","enrichment")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","enrichment")
-get_plot(ctwas_param,susie_param,1,"Enrichment")
-```
-
-#### Enrichment = 10
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(2, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","enrichment")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","enrichment")
-get_plot(ctwas_param,susie_param,10,"Enrichment")
-```
-
-#### Enrichment = 40
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(3, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","enrichment")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","enrichment")
-get_plot(ctwas_param,susie_param,40,"Enrichment")
-```
-
-#### Enrichment = 80
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(4, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","enrichment")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","enrichment")
-get_plot(ctwas_param,susie_param,80,"Enrichment")
-```
-
-#### Gene Prior = 0.00025
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(1, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior")
-get_plot(ctwas_param,susie_param,0.00025,"Gene Prior")
-```
-
-#### Gene Prior = 0.0025
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(2, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior")
-get_plot(ctwas_param,susie_param,0.0025,"Gene Prior")
-```
-
-#### Gene Prior = 0.01
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(3, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior")
-get_plot(ctwas_param,susie_param,0.01,"Gene Prior")
-```
-
-#### Gene Prior = 0.02
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(4, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior")
-get_plot(ctwas_param,susie_param,0.02,"Gene Prior")
-```
-
-#### Gene Variance = 10.2
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(1, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior_var")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior_var")
-get_plot(ctwas_param,susie_param,10.2,"Gene Prior")
-```
-
-#### Gene Variance = 10.2
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(2, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior_var")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior_var")
-get_plot(ctwas_param,susie_param,10.2,"Gene Prior")
-```
-
-#### Gene Variance = 10.2
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(3, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior_var")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior_var")
-get_plot(ctwas_param,susie_param,10.2,"Gene Prior")
-```
-
-#### Gene Variance = 10.2
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(4, 1:10, sep = "-")
-
-ctwas_param <- get_parameter_allregion(results_dir,runtag,simutags,"ctwas","group_prior_var")
-susie_param <- get_parameter_allregion(results_dir,runtag,simutags,"susie","group_prior_var")
-get_plot(ctwas_param,susie_param,10.2,"Gene Prior")
-```
-
-### Parameter estimation on all regions (min_gene=0, min_p_single_effect=0, min_var=1)
-#### Enrichment = 1
-```{r echo=FALSE}
-results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_one_tissue/"
-runtag = "one_tissue"
-simutags <- paste(1, 1:10, sep = "-")
-
 ctwas_param <- get_parameter(results_dir,runtag,simutags,"ctwas","enrichment")
 susie_param <- get_parameter(results_dir,runtag,simutags,"susie","enrichment")
 get_plot(ctwas_param,susie_param,1,"Enrichment")
@@ -278,7 +277,7 @@ simutags <- paste(1, 1:10, sep = "-")
 
 ctwas_param <- get_parameter(results_dir,runtag,simutags,"ctwas","group_prior_var")
 susie_param <- get_parameter(results_dir,runtag,simutags,"susie","group_prior_var")
-get_plot(ctwas_param,susie_param,10.2,"Gene Prior")
+get_plot(ctwas_param,susie_param,10.2,"Gene Prior Variance")
 ```
 
 #### Gene Variance = 10.2
@@ -289,7 +288,7 @@ simutags <- paste(2, 1:10, sep = "-")
 
 ctwas_param <- get_parameter(results_dir,runtag,simutags,"ctwas","group_prior_var")
 susie_param <- get_parameter(results_dir,runtag,simutags,"susie","group_prior_var")
-get_plot(ctwas_param,susie_param,10.2,"Gene Prior")
+get_plot(ctwas_param,susie_param,10.2,"Gene Prior Variance")
 ```
 
 #### Gene Variance = 10.2
@@ -300,7 +299,7 @@ simutags <- paste(3, 1:10, sep = "-")
 
 ctwas_param <- get_parameter(results_dir,runtag,simutags,"ctwas","group_prior_var")
 susie_param <- get_parameter(results_dir,runtag,simutags,"susie","group_prior_var")
-get_plot(ctwas_param,susie_param,10.2,"Gene Prior")
+get_plot(ctwas_param,susie_param,10.2,"Gene Prior Variance")
 ```
 
 #### Gene Variance = 10.2
@@ -311,5 +310,5 @@ simutags <- paste(4, 1:10, sep = "-")
 
 ctwas_param <- get_parameter(results_dir,runtag,simutags,"ctwas","group_prior_var")
 susie_param <- get_parameter(results_dir,runtag,simutags,"susie","group_prior_var")
-get_plot(ctwas_param,susie_param,10.2,"Gene Prior")
+get_plot(ctwas_param,susie_param,10.2,"Gene Prior Variance")
 ```
